--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.alec.thewhiteowl">
 
+    <uses-permission android:name="ANDROID.PERMISSION.INTERNET"></uses-permission>
+    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +25,8 @@
         <activity android:name=".FoodMenuActivity" />
         <activity android:name=".BeerMenuActivity" />
         <activity android:name=".DirectionsActivity"></activity>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBe8MIaoZ1-cBAAhcnXXWUNnkfRPY5Mw-8"/>
     </application>
 
 </manifest>
